correct alignment on status page

--- a/viewer/style/avnav_viewer_new.less
+++ b/viewer/style/avnav_viewer_new.less
@@ -1263,7 +1263,8 @@ span.valuePrefix{
     }
     .status {
       .listEntry();
-      .flex-direction(column);
+      flex-direction: column;
+      align-items: flex-start;
       padding-left: 1em;
       margin-top: 5px;
       line-height: 1.5em;
